--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name":"Unity Editor",
+            "type":"unity",
+            "request":"launch"
+        },
+        {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
